--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
+{
 "manifest_version": 2,
 "name": "paf13",
 "version": "1.0",
 
 
-"default_locale": "en",
+//"default_locale": "en",
 "description": "DESCRIPTION GOES HERE",
-"icons": {...},
+//"icons": {...},
 
 "browser_action": {
 	"default_icon": {},
 	"default_title": "default_title",
 	"default_popup": "popup.html"
+	//"options_page": "options.html"
+	},
+"permissions": ["tabs", "http://*/*", "https://*/*"]
+
 }
