Split redirect blocked sites GET
Took it out of newRedirect and put in in utilities and then loaded
utilities into the manifest

--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
 
 
 "background": {
-  "scripts": ["newRedirect.js"]
+  "scripts": ["newRedirect.js", "utilities.js"]
   //"persistent": false
 	}
 }
