--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
 
 
 "background": {
-  "scripts": ["newRedirect.js", "utilities.js"]
+  "scripts": ["redirect.js"]
   //"persistent": false
 	}
 }
