--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,7 @@
 "background": {
   "scripts": ["newRedirect.js"]
   //"persistent": false
-	}
+	},
+
+"web_accessible_resources": ["newRedirect.js", "custom.js", "utilities.js", "custom.css", "formatFix.js", "index.js", "jquery-1.10.2.min.js", "monitor.js", "popup.js"]
 }
