--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
 
 
 "background": {
-  "scripts": ["redirect.js", "utilities.js", "tracking.js"]
+  "scripts": ["redirect_tabs.js", "utilities.js", "tracking.js"]
   //"persistent": false
 	},
 
